# ant-wars

./: CMakeLists.txt  LICENSE  Makefile  README  README.md  antwars.conf  prohlaseni.txt  zadani.txt
examples/maps/: 1. LEVEL  1. LEVEL - MAP IN BAD FORMAT  2. LEVEL  3. LEVEL  4. LEVEL  5. LEVEL  6. LEVEL - ONLY_BOTS  7. LEVEL - BIG_MAP  8. LEVEL - BIGGEST_MAP  9. LEVEL - ENGINE CAPABILITES DEMO  >>>experimental<<
examples/saves/: normal save  save with missing map file  very small save  very very big save  zlats
src/: Doxyfile  abstractPlayer.cpp  abstractPlayer.h  ant.cpp  ant.h  antHill.cpp  antHill.h  botPlayer.cpp  botPlayer.h  command.cpp  command.h  common.h  empty.h  exceptions.h  game.cpp  game.h  gameWrapper.cpp  gameWrapper.h  humanPlayer.cpp  humanPlayer.h  inOut.cpp  inOut.h  main.cpp  map.cpp  map.h  mapElement.h  menu.cpp  menu.h  path.cpp  path.h  wall.h
